mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-personas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-personas
  template:
    metadata:
      labels:
        app: mongodb-personas
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
        resources:
          requests:
            cpu: "50m"
          limits:
            cpu: "350m"
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc
