front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173  # Update with your app's port
  type: ClusterIP
