ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /backend(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-service  
            port:
              number: 80
      - path: /front(/|$)(.*)  
        pathType: Prefix
        backend:
          service:
            name: front-service
            port:
              number: 80
